<resources>
    <string name="app_name">Hangman</string>
    <string name="action_settings">Settings</string>
    <string name="hangman6">6 chances left</string>
    <string name="hangman5">5 chances left</string>
    <string name="hangman4">4 chances left</string>
    <string name="hangman3">3 chances left</string>
    <string name="hangman2">2 chances left</string>
    <string name="hangman1">1 chances left</string>
    <string name="hangman0">0 chances left</string>
    <string name="the_word">H a n g m a n</string>
    <string name="guess_button">Guess!</string>
    <string name="new_word_button">New word</string>
    <string name="guess_input_hint">Enter a letter</string>
    <string name="guesses_left">You have 6 wrong guesses left!</string>
    <string name="letters_tried_text">You already tried the following letters:</string>
    <string name="letters_tried"></string>
    <string name="toast_win">You did it, congratulations!</string>
    <string name="toast_loss">Uh oh, try again!</string>
    <string name="guesses_welcome">Welcome to Hangman!</string>
    <string name="letters_tried_text_welcome">Try to guess the word with less than 6 mistakes.</string>
    <string name="back_to_menu_button">Back to menu</string>
    <string name="menu_normal_title">Hangman</string>
    <string name="menu_evil_title">Evil Hangman</string>
    <string name="new_game_button">New Game</string>
    <string name="instructions_button">Instructions</string>
    <string name="settings_button">Settings</string>
    <string name="high_scores_button">High scores</string>
    <string name="high_scores_title">High scores</string>
    <string name="instructions_title">Instructions</string>
    <string name="settings_title">Settings</string>
    <string name="settings_evil_mode_text">Evil Mode?</string>
    <string name="settings_evil_mode_checkbox_off">Evil mode is now OFF</string>
    <string name="settings_evil_mode_checkbox_on">Evil mode is now ON</string>
</resources>