<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/hangman6"
        android:src="@drawable/hangman6"
        android:contentDescription="@string/hangman6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageView
        android:id="@+id/hangman5"
        android:src="@drawable/hangman5"
        android:contentDescription="@string/hangman5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageView
        android:id="@+id/hangman4"
        android:src="@drawable/hangman4"
        android:contentDescription="@string/hangman4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageView
        android:id="@+id/hangman3"
        android:src="@drawable/hangman3"
        android:contentDescription="@string/hangman3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageView
        android:id="@+id/hangman2"
        android:src="@drawable/hangman2"
        android:contentDescription="@string/hangman2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageView
        android:id="@+id/hangman1"
        android:src="@drawable/hangman1"
        android:contentDescription="@string/hangman1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageView
        android:id="@+id/hangman0"
        android:src="@drawable/hangman0"
        android:contentDescription="@string/hangman0"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/the_word"
        android:text="@string/the_word"
        android:textSize="48sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/hangman6"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/new_word_button"
        android:text="@string/new_word_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hangman6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/guess_button"
        android:text="@string/guess_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hangman6"
        android:layout_toLeftOf="@+id/new_word_button"
        android:layout_toStartOf="@+id/new_word_button" />

    <EditText
        android:id="@+id/guess_input"
        android:hint="@string/guess_input_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hangman6"
        android:layout_toLeftOf="@+id/guess_button"
        android:layout_toStartOf="@+id/guess_button"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/guesses_left"
        android:text="@string/guesses_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guess_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/letters_tried_text"
        android:text="@string/letters_tried_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guesses_left"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/letters_tried"
        android:text="@string/letters_tried"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/letters_tried_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

</RelativeLayout>
